# PyPiSc-Rs

./: Cargo.toml  README.md  todo.txt
.github/workflows/: main.yml  release.yml
src/: list.rs  main.rs  search.rs
src/list/: cache.rs
