[package]
name = "pypisc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bson = "2.6.1"
colored = "2.0.0"
http = "0.2.9"
reqwest = "0.11.16"
scraper = "0.16.0"
serde_json = "1.0.96"
# serde = "1.0.160"
tokio = {version = "1.27.0", features = ["full"]}
